# myTinyRPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  user.pb.cc  user.pb.h  user.proto
examples/callee/: CMakeLists.txt  CalleeUserService.cc  UserService.cc
examples/caller/: CMakeLists.txt  CallerUserService.cc  UserService.cc
include/: RpcApplication.h  RpcChannel.h  RpcConfig.h  RpcHeader.pb.h  RpcProvider.h
src/: CMakeLists.txt  RpcApplication.cc  RpcChannel.cc  RpcConfig.cc  RpcHeader.pb.cc  RpcProvider.cc
tests/: CMakeLists.txt
tests/protobuf/: CMakeLists.txt  protobuf_unittest.cc  protobuf_unittest.pb.cc  protobuf_unittest.pb.h  protobuf_unittest.proto
